llvm/src/snapshots/transmute_llvm__tests__eq_number_number.snap
---
source: llvm/src/lib.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

define i1 @f(i64 %"l#sym19#", i64 %"r#sym20#") {
entry:
  %"r#local#sym20#" = alloca i64, align 8
  store i64 %"r#sym20#", ptr %"r#local#sym20#", align 4
  %"l#local#sym19#" = alloca i64, align 8
  store i64 %"l#sym19#", ptr %"l#local#sym19#", align 4
  %"l#local#sym19#1" = load i64, ptr %"l#local#sym19#", align 4
  %"r#local#sym20#2" = load i64, ptr %"r#local#sym20#", align 4
  %"eq#" = icmp eq i64 %"l#local#sym19#1", %"r#local#sym20#2"
  ret i1 %"eq#"
}
