llvm/src/snapshots/transmute_llvm__tests__fibo_rec_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_F1f1n(i64 %"n#param#sym20#") gc "shadow-stack" {
entry:
  %"le#" = icmp slt i64 %"n#param#sym20#", 2
  br i1 %"le#", label %common.ret, label %end_if

common.ret:                                       ; preds = %entry, %end_if
  %common.ret.op = phi i64 [ %"add#", %end_if ], [ %"n#param#sym20#", %entry ]
  ret i64 %common.ret.op

end_if:                                           ; preds = %entry
  %"sub#" = add nsw i64 %"n#param#sym20#", -1
  %"f#res#" = call i64 @_TM0_F1f1n(i64 %"sub#")
  %"sub#1" = add nsw i64 %"n#param#sym20#", -2
  %"f#res#2" = call i64 @_TM0_F1f1n(i64 %"sub#1")
  %"add#" = add i64 %"f#res#2", %"f#res#"
  br label %common.ret
}

attributes #0 = { nounwind }
