llvm/src/snapshots/transmute_llvm__tests__function_return_array_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@layout_a2n = global [3 x i64] [i64 1, i64 2, i64 0]

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define ptr @_TM0_1f0() gc "shadow-stack" {
entry:
  %"gcroot#heap#array#" = alloca ptr, align 8
  store ptr null, ptr %"gcroot#heap#array#", align 8
  call void @llvm.gcroot(ptr nonnull %"gcroot#heap#array#", ptr nonnull @layout_a2n)
  %"heap#array#" = call ptr @gc_malloc(i64 16)
  store ptr %"heap#array#", ptr %"gcroot#heap#array#", align 8
  store i64 0, ptr %"heap#array#", align 4
  %"heap#array#.repack5" = getelementptr inbounds [2 x i64], ptr %"heap#array#", i64 0, i64 1
  store i64 1, ptr %"heap#array#.repack5", align 4
  ret ptr %"heap#array#"
}

attributes #0 = { nounwind }
