llvm/src/snapshots/transmute_llvm__tests__function_return_explicit_void_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

declare void @print(i64)

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

define private void @_glob() {
entry:
  unreachable
}

define void @f() gc "shadow-stack" {
entry:
  ret void
}

attributes #0 = { nounwind }
